tests/functional/lang/eval-fail-all-1.err.exp
error:
       … while calling the 'all' builtin
         at /pwd/lang/eval-fail-all-1.nix:1:1:
            1| builtins.all 1 "foo"
             | ^
            2|

       … while evaluating the first argument passed to builtins.all

       error: expected a function but found an integer: 1
